# highrisk_ut_aih

./: .gitignore  .pylintrc  README.md  brainstorm.md  compose.local-model.yml  pyproject.toml  requirements.txt  virtual_primary_care_agent.md
.github/workflows/: pylint.yml
agents/derm_advisor_agent/: .env.example  __init__.py  agent.py
agents/derm_advisor_agent/derm/: root_agent.yaml
apps/: streamlit_inference.py
docs/results/pad_ufes20_efficientnetv2_s/: checkpoint_location.txt  metrics.json  split_summary.json  test_predictions.csv
scripts/: download_kaggle_dataset.py  prepare_ham10000_imagefolder.py  prepare_ham10000_lesion_imagefolder.py  prepare_pad_ufes20_imagefolder.py  train_isic_model.py  train_pad_ufes20_model.py  train_vision_model.py
src/derm_advisor/: adk_agent.py  adk_runner.py  config.py
src/derm_advisor/vision/: dataset.py  inference.py  isic_dataset.py  isic_evaluation.py  isic_train.py  model.py  pad_ufes_dataset.py  pad_ufes_evaluation.py  pad_ufes_train.py  train.py  transforms.py
src/derm_advisor/viz/: isic_reports.py  pad_ufes_reports.py  plots.py
tests/: test_streamlit_prompt_helpers.py
