[project]
name = "derm-advisor"
version = "0.1.0"
description = "Personalized Virtual Dermatology Health Advisor (local ADK + Kaggle derm datasets)"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
